include/monad/fiber/context.h

struct monad_fiber_context_asan_fake_stack
{
    void *fake_stack;
    void *stack_bottom;
    size_t stack_size;
};
typedef struct monad_fiber_context
{
    fcontext_t fiber;
#if defined(MONAD_USE_TSAN)
    void *tsan_fiber;
#endif

#if defined(MONAD_USE_ASAN)
    struct monad_fiber_context_asan_fake_stack asan, *asan_to_finish;
#endif
    char const *name;
    // potential additions: context_local data, unwind code, tracing (for
    // debugging) and names (which could be used with tsan) and we can add a
    // vtable here

    // there is NO exit function at this moment, but we could add this.
    // it's unspecified what happens if you destroy the main context, as it
    // would always be a leak one would assume.
} monad_fiber_context_t;
monad_fiber_context_t *monad_fiber_main_context();
void monad_fiber_set_name(monad_fiber_context_t *, char const *name);
// the return is the context we're resumed from
monad_fiber_context_t *monad_fiber_context_switch(
    monad_fiber_context_t *from, monad_fiber_context_t *to);
monad_fiber_context_t *monad_fiber_context_switch_with(
    monad_fiber_context_t *from, monad_fiber_context_t *to,
    monad_fiber_context_t *(*func)(monad_fiber_context_t *, void *), void *arg);
monad_fiber_context_t *monad_fiber_context_callcc(
    monad_fiber_context_t *from, size_t stack_size, bool protected_stack,
    monad_fiber_context_t *(*func)(
        void * /* func_arg */, monad_fiber_context_t * /* fiber */,
        monad_fiber_context_t * /* from */),
    void *func_arg);